fixed card radius as well as spacing

--- a/client/src/styles/ListingCard.css
+++ b/client/src/styles/ListingCard.css
@@ -51,7 +51,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 330px;
-    height: 250px;
+    height: 230px;
     
 }
 
@@ -67,6 +67,8 @@
 
 .listing-card-picture {
     width: 100%;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
     height: auto;
 }
 
@@ -77,7 +79,7 @@
     align-items: flex-start;  
     height: 82px;
     position: relative;
-    font-size: small;
+    font-size: medium !important;
  
      /*background-color: rgba(37, 51, 93, 0.34);*/ 
 }
@@ -88,15 +90,17 @@
     align-items: left;
     text-align: flex-start;
     gap: 2px; 
-    font-size: small;
     height: 100px;
     width: fit-content;
     /*background-color: rgb(0, 255, 60); */
+
+
+    
 }
 
 .listing-address {
     color: rgba(37, 51, 93, 0.64);
-    font-size: medium;
+
     /* background-color: aqua; */
     width: fit-content;
 
